@startuml

!theme monokai from ..\data

hide enum empty members
hide class empty members


enum GameMode {
    PVP
    PVB
    BVB
}
enum DifficultyLvl {
    EASY = 0.9
    HARD = 1.0
}


abstract class Player {
    +card: Card
    +fail: <i>bool</i>
    +action() → <i>bool</i>
    -next() → <i>bool</i>
    -strike() → <i>bool</i>
}


class Human {
    +action() → <i>bool</i>
}


class Bot {
    +difficulty: DifficultyLvl
    -actions: <i>list</i>[<i>bool</i>]
    __init__()
    +action() → <i>bool</i>
}


class Game {
    +mode: GameMode
    +players: <i>list</i>[Player]
    -purse: <i>set</i>[Token]
    ..<i> purse.getter </i>..
'    ready → <i>bool</i>
    +get_token → Token
    __
'    +add_player() → <i>None</i>
'    +start() → Player
    +check_fail() → <i>None</i>
}


frame " main  " {
    class Controller {
        {method}...
        +get_input() → Answer
        {method}...
    }
}


Player <|-- Human
Player <|-- Bot

Human ...> Controller::get_input

Bot o-- DifficultyLvl

Game o-left- GameMode
Game o-down- Player
Game .down.> Player


DifficultyLvl -[hidden]- Controller
Human -right[hidden]- Bot


@enduml